<resources>
    <!-- Titles -->
    <string name="app_name">Bowl Buddy</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_maps">Map</string>

    <!-- Login, Signup, Etc. -->
    <string name="password_hint">Password</string>
    <string name="action_back">Back</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <!-- Cards, List Items, Menu Entries -->
    <string name="enter_review_hint">"Enter Text Review</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit_review">Edit Review</string>
    <string name="action_delete_review">Delete Review</string>
    <string name="sort_by">Sort By...</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_favorites">My Favorites</string>

    <!-- Buttons, Menu Fields, etc. -->
    <string name="action_sign_up">Sign Up</string>
    <string name="action_login">Log In</string>
    <string name="action_logout">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="action_my_profile">My Profile</string>
    <string name="submit">Submit</string>

    <!-- Profile Strings -->
    <string name="username_placeholder">Username</string>
    <string name="karma">Karma</string>
    <string name="reviews">Reviews</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_username_hint">New Username</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="unknown">Unknown</string>
    <string name="profile_greeting">Hello, %1$s!</string>

    <!-- Details Strings -->
    <string name="no_reviews_found">No reviews found!</string>
    <string name="open_until">Open Until:</string>
    <string name="handicap_symbol">&#9855;</string>
    <string name="gender_symbol">&#128104;</string>
    <string name="floor_desc">Floor:</string>
    <string name="room_desc">Room:</string>

    <!-- Review Strings -->
    <string name="building_desc">Building:</string>
    <string name="details_desc">Details:</string>
    <string name="details_hint">Enter more details...</string>
    <string name="smell_desc">Smell:</string>
    <string name="clean_desc">Clean:</string>
    <string name="quiet_desc">Quiet:</string>
    <string name="gender_desc">Gender:</string>
    <string name="handicap_desc">Handicap Access:</string>
    <string name="ply_desc">Two Ply Paper:</string>


    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Unigender</item>
        <item>Other</item>
    </string-array>
</resources>
