<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/action_my_profile" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/my_reviews"
            android:icon="@drawable/ic_edit_black"
            android:title="@string/my_reviews" />
    </group>
    <group>
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_star_black"
            android:title="@string/my_favorites"/>
    </group>
    <group>
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/action_logout" />
    </group>
</menu>